# bigcodebench

./: .dockerignore  .gitignore  ADVANCED_USAGE.md  CITATION.cff  Dockerfile  Generate.Dockerfile  LICENSE  MANIFEST.in  README.md  _README.md  codeqwen1.5-7b-chat-humaneval-0.2-1-sanitized.py  codeqwen1.5-7b-chat-humaneval-0.2-1-sanitized_eval_results.json  codeqwen1.5-7b-chat-openeval-0-1-sanitized_eval_results.json  gpt-3.5-turbo-0125-openeval-0.2-1-sanitized_eval_results.json  pyproject.toml  release.sh  release_docker.sh  requirements-wildcodebench.txt  requirements.txt  run.sh  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: buggy_contract.yml  buggy_test.yml  model_eval_request.yml
.github/workflows/: publish.yml  python-publish.yml
Docker/: Evaluate.Dockerfile  Generate.Dockerfile  Generate_Cuda11.Dockerfile  Generate_Cuda12.Dockerfile  Gradio.Dockerfile
Requirements/: requirements-eval.txt  requirements.txt
analysis/: README.md  bcb_hard.py  bcb_subset.py  get_results.py  lib2domain.json  results.json  task2domain.json  utils.py
bigcodebench/: evaluate.py  generate.py  inspect.py  model.py  sanitize.py  syncheck.py
bigcodebench/data/: __init__.py  bigcodebench.py  constant.py  network-free-set.txt  utils.py
bigcodebench/eval/: __init__.py  utils.py
bigcodebench/provider/: __init__.py  anthropic.py  base.py  google.py  hf.py  hf_inference.py  mistral.py  openai.py  utility.py  vllm.py
codegen/: generate.py  inspection.py  model.py  run.sh
decontamination/: n_gram_check.py  odex_10_overlap.txt  odex_13_overlap.txt  stackoverflow_10_overlap.txt  stackoverflow_13_overlap.txt  starcoderdata_10_overlap.txt
openeval/: __init__.py  evaluate.py  lecacy_sanitize.py  sanitize.py  syncheck.py
openeval/data/: __init__.py  openeval.py  utils.py
openeval/eval/: __init__.py  utils.py
sandbox-templates/: e2b.Dockerfile  e2b.toml
scripts/: rt_HG.sh
tests/: test_legacy_sanitizer.py  test_treesitter_sanitizer.py
tools/: fix_020.py  fix_v0110.py  fix_v019.py  fix_v020.py  fix_v022.py  fix_v023.py  fix_v025.py
wildcode/: __init__.py  evaluate.py  generate.py  inspect.py  inspection.py  lecacy_sanitize.py  model.py  sanitize.py  syncheck.py
wildcode/data/: __init__.py  utils.py  wildcodebench.py
wildcode/eval/: __init__.py  utils.py
