[metadata]
name = bigcodebench
description = "WildCode: A minimal viable package to evaluate code generation with realistic constraints in the wild"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bigcode-project/bigcodebench
license = Apache-2.0
license_files = LICENSE
platform = any
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License

[options]
packages = find:
python_requires = >=3.8
dependency_links =
install_requires =
    accelerate>=0.30.1
    anthropic>=0.26.1
    appdirs>=1.4.4
    fire>=0.6.0
    google-generativeai>=0.5.4
    mistralai>=0.2.0
    multipledispatch>=0.6.0
    numpy>=1.19.5
    openai>=1.11.1
    Pympler>=1.0.1
    rich>=12.3.0
    stop-sequencer>=1.2.3
    tempdir>=0.7.1
    termcolor>=2.0.0
    tqdm>=4.56.0
    tree_sitter_languages>=1.10.2
    tree-sitter==0.21.3
    wget>=3.2

[options.entry_points]
console_scripts =
    bigcodebench.evaluate = bigcodebench.evaluate:main
    bigcodebench.sanitize = bigcodebench.sanitize:main
    bigcodebench.syncheck = bigcodebench.syncheck:main
    bigcodebench.legacy_sanitize = bigcodebench.legacy_sanitize:main
    bigcodebench.generate = bigcodebench.generate:main
    bigcodebench.inspect = bigcodebench.inspect:main